test/end-to-end/compile-errors/auto-fun-errors.crow
main void()
	()

r record

to json(a r) bare

blah json(a r)

== bool(a r, b nat)

to json(a r, b r)

== bool(a ex, b ex)
ex extern

== bool(a en, b en)
en enum(x)

== comparison(a r, b r)
<=> bool(a r, b r)
to bool(a r)

== bool(a string, b string)
